2024-01-25T01:11:54Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7648440579 # 54
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-25
* notice: last 14d: unq all: 3 19
* notice: prev accum: outdated-unq outdated-all / unq all: 846 1547 / 858 1567
* notice: next accum: outdated-unq outdated-all / unq all: 847 1548 / 858 1567
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-01-11] / []

2024-01-24T16:20:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7643116730 # 53
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 845 1545 / 858 1566
* notice: next accum: outdated-unq outdated-all / unq all: 846 1547 / 858 1567
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [2024-01-10] / [2024-01-24]

2024-01-24T08:20:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7637362834 # 52
* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-24
* notice: last 14d: unq all: 3 20
* notice: prev accum: outdated-unq outdated-all / unq all: 845 1545 / 857 1565
* notice: next accum: outdated-unq outdated-all / unq all: 845 1545 / 858 1566
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-01-10 2024-01-24]

2024-01-23T16:21:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/7628709592 # 50