@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-25T01:11:54Z",
+  "timestamp" : "2024-01-25T08:20:15Z",
   "count_outdated" : 1548,
   "uniques_outdated" : 847,
-  "count" : 1567,
-  "uniques" : 858,
+  "count" : 1568,
+  "uniques" : 859,
   "clones" : [
     {
       "timestamp": "2024-01-12T00:00:00Z",
@@ -82,6 +82,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-01-25T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
