@@ -1,5 +1,5 @@
 {
-  "count": 19,
+  "count": 20,
   "uniques": 3,
   "clones": [
     {
@@ -45,6 +45,11 @@
     {
       "timestamp": "2024-01-24T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-01-25T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
